用户表单禁用回车提交跳过认证

--- a/app/views/layouts/just_front_sign.html.erb
+++ b/app/views/layouts/just_front_sign.html.erb
@@ -27,7 +27,15 @@
       <header class="header">
         <div class="header-logo">
           <a href="/"><h1 class="header--logo__36kr"></h1></a>
-          <p id="tip" class="header--logo__slogan">只需要一个邮箱，即可享受尊贵体验</p>
+          <p id="tip" class="header--logo__slogan">
+            <% if request.url.include?('users') %>
+              邮箱已被使用，请更换
+            <% elsif request.url.include?('sign_login')%>
+                邮箱或密码有误，请检查
+            <% else %>
+                只需要一个邮箱，即可享受尊贵体验
+            <% end %>
+          </p>
         </div>
         <div class="header-help">
           <a href="/" class="header-help__btn">帮助</a>
