用户信息添加编辑功能

--- a/app/assets/stylesheets/just_user.scss
+++ b/app/assets/stylesheets/just_user.scss
@@ -892,3 +892,9 @@ input[type="password"] {
   position: static;
   width: auto;
 }
+
+.img-circle {
+  -webkit-border-radius:500px;
+  -moz-border-radius:500px;
+  border-radius:500px
+}
