--- a/app/views/layouts/just_front.html.erb
+++ b/app/views/layouts/just_front.html.erb
@@ -14,16 +14,11 @@
 <!--[if lt IE 10]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-
 <div class="nav-wrapper navbar-fixed-top">
   <nav class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
       <a class="navbar-brand" href="/" style="padding-top: 0px">
-        <% if current_user %>
-            <img alt="Brand" height="50" src="<%= image_url('toutu/just_logo.png') %>">
-        <% else %>
-            <img alt="Brand" height="50" src="<%= image_url('toutu/just_logo.png') %>">
-        <% end %>
+        <img alt="Brand" height="50" src="<%= image_url('toutu/just_logo.png') %>">
       </a>
     </div>
     <ul class="nav navbar-nav navbar-right">
@@ -40,14 +35,16 @@
       <% if current_user %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-              <img src="<%= current_user.avatar.present?? current_user.avatar : image_url('toutu/just_logo.png') %>" height="18px" class="img-circle">
-              <%= current_user.email %>
+              <img src="<%= display_avatar current_user%>" height="18px" class="img-circle">
+              <%= display_name current_user %>
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="<%#= admin_dashboard_path %>"> <i class="fa fa-gears"></i>&nbsp;数据管理</a></li>
-              <li><a href="<%#= avatar_user_details_path %>"><i class="fa fa-upload"></i>&nbsp;上传头像</a></li>
-              <li><a href="<%#= profile_user_details_path %>"><i class="fa fa-user-secret"></i>&nbsp;个人中心</a></li>
+              <% if current_user.role = 'admin' %>
+                 <li><a href="<%= dashboard_path %>"> <i class="fa fa-gears"></i>&nbsp;数据管理</a></li>
+              <% end%>
+              <li><a href="<%= new_avatar_path %>"><i class="fa fa-upload"></i>&nbsp;上传头像</a></li>
+              <li><a href="<%= profile_path %>"><i class="fa fa-user-secret"></i>&nbsp;个人中心</a></li>
               <li><a href="<%= sign_out_path %>"><i class="fa fa-sign-out"></i>&nbsp;账户登出</a></li>
             </ul>
           </li>
@@ -58,7 +55,6 @@
     </ul>
   </nav>
 </div>
-
 <div>
   <%= yield %>
 </div>
