--- a/app/views/layouts/ltes/_left_menu_navigation.html.erb
+++ b/app/views/layouts/ltes/_left_menu_navigation.html.erb
@@ -15,6 +15,11 @@
       <i class="fa fa-cloud"></i> <span>文件管理</span>
     </a>
   </li>
+  <li class="treeview <% if controller_name=='dashboard' && action_name == 'users'%>active<% end %>">
+    <a href="<%= users_path %>">
+      <i class="fa fa-user"></i> <span>用户管理</span>
+    </a>
+  </li>
   <li class="header">视频管理</li>
   <% Column.latest.each do |item| %>
       <li class="treeview <% if params[:english] == item.english || params[:column_id] == item.id.to_s %>active<% end %>">
