--- a/app/views/layouts/just_admin.html.erb
+++ b/app/views/layouts/just_admin.html.erb
@@ -46,13 +46,23 @@
   <aside class="main-sidebar">
     <section class="sidebar">
       <div class="user-panel">
-        <div class="pull-left image">
-          <img src="<%= image_url('toutu/face.png') %>" class="img-circle" alt="User Image" />
-        </div>
-        <div class="pull-left info">
-          <p>超级管理员</p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-        </div>
+        <% if current_admin %>
+            <div class="pull-left image">
+              <img src="<%= image_url('toutu/face.png') %>" class="img-circle" alt="User Image" />
+            </div>
+            <div class="pull-left info">
+              <p>超级管理员</p>
+              <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+            </div>
+        <% elsif current_user.present?  %>
+            <div class="pull-left image">
+              <img src="<%= display_avatar current_user %>" class="img-circle" alt="User Image" />
+            </div>
+            <div class="pull-left info">
+              <p><%= display_name current_user %></p>
+              <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+            </div>
+        <% end %>
       </div>
       <!-- 搜索 -->
       <%= render :partial => 'layouts/ltes/left_menu_search' %>
