--- a/app/views/welcome/channel.html.erb
+++ b/app/views/welcome/channel.html.erb
@@ -14,6 +14,11 @@
                 <a href="<%= video_channel_path(channel.english) %>"><i class="<%= channel.icon %>"></i>&nbsp;&nbsp;<%= channel.name %></a>
               </li>
           <% end %>
+          <% if current_user && current_user.can_av? && Column.find_by_english('Fucking')%>
+              <% channel = Column.find_by_english('Fucking') %>
+              <li <% if params[:english].present? && params[:english] == channel.english%> class="active" <% end %>>
+                <a href="<%= video_channel_path(channel.english) %>"><i class="<%= channel.icon %>"></i>&nbsp;&nbsp;<%= channel.name %></a></li>
+          <% end %>
         </ul>
       </div>
     </div>
