--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
       </div>
       <div class="programa-list">
         <ul>
-          <% Column.hexie.each do |channel| %>
+          <% Column.hexie.shunxu.each do |channel| %>
               <li><a href="<%= video_channel_path(channel.english) %>"><i class="<%= channel.icon %>"></i>&nbsp;&nbsp;<%= channel.name %></a></li>
           <% end %>
           <% if current_user && current_user.can_av? && Column.find_by_english('Fucking')%>
