--- a/app/views/layouts/ltes/_left_menu_search.html.erb
+++ b/app/views/layouts/ltes/_left_menu_search.html.erb
@@ -1,4 +1,4 @@
-<form action="<%#= admin_search_path %>" method="get" class="sidebar-form">
+<form action="<%= search_path %>" method="get" class="sidebar-form">
   <div class="input-group">
     <input type="text" name="query" value="<%= params[:query] %>" class="form-control" placeholder="Search..."/>
       <span class="input-group-btn">
