网页title名称更换，添加open graph meta信息

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="footer-36kr">
-      <h3>暗夜军团 <font style="font-size: 20px"> | </font> 流星蝴蝶剑</h3>
+      <h3>微信关注 <font style="font-size: 20px"> | </font> 资讯尽在掌握</h3>
       <ul>
-        <li style="padding-left: 10px"><img src="<%= Settings.qiniu_cdn_host %>201508_MaWTPiO5oAIkYczUtdKQN6GVp.png" style="width: 120px;height: 120px" title="扫我加微信"></li>
+        <li style="padding-left: 10px"><img src="<%= Settings.qiniu_cdn_host %>img_RQsr95VbIZc1uUXnSjOg.jpg" style="width: 120px;height: 120px" title="扫我关注订阅号"></li>
       </ul>
     </div>
     <div class="footer-subscribe">
