--- a/app/views/welcome/channel.html.erb
+++ b/app/views/welcome/channel.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title, @channel.name + ' | 华轩·张') %>
+<%= content_for(:title, @channel.name + ' | ^轩^') %>
 <div class="container" style="padding-top: 70px">
   <div class="grid">
     <div class="programa">
