--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
-<%= content_for(:title, '好看好玩的视频 | 华轩·张') %>
-<%= render :partial=> 'shared/carousel_picture', locals: { columns: @channel }%>
+<%= content_for(:title, '在沉默中爆发 | ^轩^') %>
+<%= render :partial=> 'shared/carousel_picture' %>
 <div class="container">
   <div class="grid">
     <div class="programa">
