--- a/app/views/welcome/interim.html.erb
+++ b/app/views/welcome/interim.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'http://7xjfim.com2.z0.glb.qiniucdn.com/Iva.css' %>
 <%= javascript_include_tag 'http://7xjfim.com2.z0.glb.qiniucdn.com/Iva.js' %>
-<%= content_for(:title, symbol_truncate(@video['title']) + ' | 华轩·张') %>
+<%= content_for(:title, symbol_truncate(@video['title']) + ' | ^轩^') %>
 <div class="container">
   <div class="grid">
     <div class="display">
