用户搜索及样式修改

--- a/app/views/administer/dashboard/users.html.erb
+++ b/app/views/administer/dashboard/users.html.erb
@@ -12,6 +12,16 @@
 <section class="content">
   <div class="box box-warning">
     <div class="box-header">
+      <form action="<%= users_path %>" method="get">
+        <div class="form-group has-feedback">
+          <div class="input-group" style="width: 300px">
+            <input type="text" name="query" value="<%= params[:query]%>" class="form-control" placeholder="键入用户昵称、邮箱">
+          <span class="input-group-btn">
+              <button class="btn btn-default btn-flat" type="submit"><i class="fa fa-slideshare"></i></button>
+          </span>
+          </div>
+        </div>
+      </form>
     </div>
     <div class="box-body">
       <div class="row">
@@ -55,8 +65,8 @@
                     <td style="text-align: left">
                       <br>
                       <span class="label label-primary" style="font-size: 16px">
-                        <i class="fa  fa-mobile"></i>
-                        <%= user.phone ? user.phone : '010-12345678' %>
+                        <i class="fa fa-map-marker"></i>
+                        <%= baidu_ip_info user %>
                       </span>
                       <br><br>
                       <span class="label label-success" style="font-size: 16px">
