视频播放器本地引用

--- a/app/views/welcome/playing.html.erb
+++ b/app/views/welcome/playing.html.erb
@@ -1,5 +1,5 @@
-<%= stylesheet_link_tag 'http://7xjfim.com2.z0.glb.qiniucdn.com/Iva.css' %>
-<%= javascript_include_tag 'http://7xjfim.com2.z0.glb.qiniucdn.com/Iva.js' %>
+<%= stylesheet_link_tag 'video_player' %>
+<%= javascript_include_tag 'video_player-4.2' %>
 <%= content_for(:title, @video.title + ' | ^轩^') %>
 <%= render partial: 'shared/og_meta', video:@video %>
 <div class="container">
