--- a/app/views/welcome/interim.html.erb
+++ b/app/views/welcome/interim.html.erb
@@ -1,5 +1,5 @@
-<%= stylesheet_link_tag 'http://7xjfim.com2.z0.glb.qiniucdn.com/Iva.css' %>
-<%= javascript_include_tag 'http://7xjfim.com2.z0.glb.qiniucdn.com/Iva.js' %>
+<%= stylesheet_link_tag 'video_player' %>
+<%= javascript_include_tag 'video_player-4.2' %>
 <%= content_for(:title, symbol_truncate(@video['title']) + ' | ^轩^') %>
 <div class="container">
   <div class="grid">
